packages/react-components/src/components/input-group/input-group.module.css
@layer components {
  .InputGroup {
    position: relative;
  }

  .Start {
    & *:is(button, input, a, select, fieldset[tabindex='0']) {
      outline-offset: -2px;
    }

    @nest .InputGroup[data-input-group-has-end='true'] &  * {
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
    }
  }

  .InputField {
    & *:is(button, input, a, select, fieldset[tabindex='0']) {
      outline-offset: -2px;
    }

    @nest .InputGroup[data-input-group-has-end='true'] & input {
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
      border-right: 0;
    }
    @nest .InputGroup[data-input-group-has-start='true'] & input {
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
      border-left: 0;
    }
  }

  .End {
    & *:is(button, input, a, select, fieldset[tabindex='0']) {
      outline-offset: -2px;
    }

    @nest .InputGroup[data-input-group-has-end='true'] & * {
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
    }
  }
}

